# opennew

./: .env.example  .gitignore  AGENT_EMBEDDING.md  DESIGN.md  Dockerfile  Makefile  README.md  SERVICE_STATUS.md  claude进度.md  demo.md  escrow-handlers.cjs  go.mod  go.sum  package-lock.json  package.json  sol 相关部分情况.md  test-e2e-full.cjs  test-mock-server-backup.cjs  test-mock-server.cjs  test-playwright.cjs  test-sandbox.cjs  test-security-audit.cjs  目前进度ccodex.md  项目总结.md
agents/node-local-renderer/: agent-guide.json  package-lock.json  package.json  tsconfig.json
firmware/components/: package-lock.json  package.json  template-manifest.json  tsconfig.json
firmware/scripts/: generate-sri.ps1  generate-sri.sh
infra/: docker-compose-pgvector.yml  docker-compose.yml
onchain/agentpay-mint/: .gitignore  Cargo.toml  README.md  mint-devnet.cjs  setup-multisig.cjs  transfer-authority.cjs
onchain/vusdc-mint/: Cargo.toml  README.md  setup-multisig.cjs  transfer-authority.cjs
onchain/vusdc-mint/scripts/: create-multisig.sh  deploy-devnet.sh  verify-mint.sh
onchain/vusdc-mint/src/: main.rs
openapi/: ancf.v1.yaml
schemas/: checkout.schema.json  manifest.schema.json  mint.schema.json  quote.schema.json  search-response.schema.json
services/: PORTS.md
services/migrations/: 001_init.sql  001_init_rollback.sql  002_seed.sql  003_performance.sql  004_pgvector.sql  005_fix_ledger_constraint.sql  006_hybrid_search.sql  (+4 more)
tests/: security-fixes.test.cjs  token-security.test.cjs
聚合接口/: config.js  fusion.js  package-lock.json  package.json  server.js
(+141 files in other folders)
